# IlyaHomeWorks

./: README.md
AI/: ask_model.ipynb  messages.json  pyproject.toml
Beatless/: main.ipynb  pyproject.toml
FiboCash/: main.ipynb  pyproject.toml
Fibonachi/: main.ipynb  pyproject.toml
Halk/: main.ipynb  pyproject.toml
PascalsTriangle/: main.ipynb  pyproject.toml
ShrekMixins/: main.ipynb  pyproject.toml
findNumber/: main.ipynb  pyproject.toml
greetChangeName/: main.ipynb  pyproject.toml
