[project]
name = "lecture-llm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ilya Lubenets", email = "xfilinxcl@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "scipy>=1.16.2",
]

[project.scripts]
lecture-llm-api = "lecture_llm_api:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
